--- a/views/top.html
+++ b/views/top.html
@@ -15,7 +15,7 @@
 	});
 </script>
 
-<body>
+<body class="wrap-outer">
 	<!-- WRAPPER -->
 	<div id="wrapper">
 		<!-- START TOP -->
@@ -85,27 +85,26 @@
 						<span class="icon color5">
 							<i class="fa fa-home"></i>
 						</span>总览
-						
+
 					</a>
 				</li>
 				<li>
-					<a href="#">
-						<span class="icon color7">
-							<i class="fa fa-flask"></i>
-						</span>管理
-						<span class="caret"></span>
-					</a>
-					<ul style="display: block;">
-						<li>
-							<a href="/admin/manage">用户管理</a>
-						</li>
-						<li>
-							<a href="/admin/drvmag">设备管理</a>
-						</li>
-						<li>
-								<a href="/admin/video">监控设备</a>
-							</li>
-					</ul>
+					<a href="/admin/manage">
+						<span class="icon color5">
+							<i class="fa fa-user"></i>
+						</span>用户管理</a>
+				</li>
+				<li>
+					<a href="/admin/drvmag">
+						<span class="icon color5">
+							<i class="fa fa-dashboard"></i>
+						</span>设备管理</a>
+				</li>
+				<li>
+					<a href="/admin/video">
+						<span class="icon color5">
+							<i class="fa fa-camera-retro"></i>
+						</span>监控设备</a>
 				</li>
 		</div>
 		<!-- END SIDEBAR -->
