--- a/views/usershow.html
+++ b/views/usershow.html
@@ -65,48 +65,38 @@
     padding-top: 80px;" id="app">
         <!--导航-->
 
-        <div class="bt">总体预览</div>
-        <div v-for="v in ob.Drv">
-            <div style="border: 1px solid #399bff;">
-                <div style="height: 30px;background-color: #399bff;padding-left: 10px;vertical-align: middle">
-                    <div style="text-align: left;width: 30%;float: left;position:absolute;line-height:30px">
-                        {{v.Drvname}}
-                    </div>
-                    <div style="text-align: right;width: 30%;float: left;position:absolute;right: 5%;line-height:30px">
-                        <a type="button" :href="'/usershowdrv?user='+ob.User+'&drv=' + v.Drvname" style="color:#fff;">查看详细信息</a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-3 col-xs-6" style="height: 130px;padding-left: 30px;margin-top: 10px;margin-bottom: 10px;border-right: 1px solid #bacdd3;width: 25%">
-                        <div style="text-align: center;font-size: 18px;">传感节点</div>
-                        <br>
-                        <div style="line-height: 28px;font-size: 15px;padding-left: 10px">数量：{{v.Sensornum}}个</div>
-                        <div style="line-height: 28px;font-size: 15px;padding-left: 10px"> 更新时间：15点15分</div>
-                        <div style="line-height: 28px;font-size: 15px;padding-left: 10px"> 报警信息：无</div>
-                    </div>
-                    <div class="col-md-3 col-xs-6" style="height: 130px;padding-left: 10px;margin-top: 10px;margin-bottom: 10px;border-right: 1px solid #bacdd3;width: 25%">
-                        <div style="text-align: center;font-size: 18px;">动作节点</div>
-                        <br>
-                        <div style="line-height: 28px;font-size: 15px;padding-left: 10px">控制器节点：{{v.IOnum}}个</div>
-                        <div style="line-height: 28px;font-size: 15px;padding-left: 10px"> 更新时间：15点15分</div>
-                    </div>
-                    <div class="col-md-3 col-xs-6" style="height: 130px;padding-left: 10px;margin-top: 10px;margin-bottom: 10px;border-right: 1px solid #bacdd3;width: 25%">
-                        <div style="text-align: center;font-size: 18px;">联锁控制器</div>
-                        <br>
-                        <div style="line-height: 28px;font-size: 15px;padding-left: 10px">联锁控制器：{{v.Logicnum}}个</div>
-                        <div style="line-height: 28px;font-size: 15px;padding-left: 10px">正在运行：0个</div>
-                    </div>
-                    <div class="col-md-3 col-xs-6" style="height: 130px;padding-left: 10px;margin-top: 10px;margin-bottom: 10px;width: 25%">
-                        <div style="text-align: center;font-size: 18px;">监控设备</div>
-                        <br>
-                        <div style="line-height: 28px;font-size: 15px;padding-left: 10px">监控设备：{{v.Videonum}}个</div>
-                        <div style="line-height: 28px;font-size: 15px;padding-left: 10px">在线数量：0个</div>
-                    </div>
-                </div>
+        <div class="title pull-bottom" style="border-left: 2px solid #399bff;padding-left: 10px">
+                总体预览
             </div>
             <br>
+        <div class="row">
+            <div class="col-sm-4" v-for="v in ob.Drv">
+                <div class="panel panel-primary">
+                    <div class="panel-title">
+                        <span class="badge" style="float: left;position:absolute;text-align: right;right: 5%;">
+                            <a type="button" :href="'/usershowdrv?user='+ob.User+'&drv=' + v.Drvname" style="color:#fff;">查看详细信息</a>
+                        </span> {{v.Drvname}}
+                    </div>
+                    <div class="panel-body">
+                        <ul class="basic-list">
+                            <li>传感器节点
+                                <span class="right label label-primary">{{v.Sensornum}}</span>
+                            </li>
+                            <li>控制器节点
+                                <span class="right label label-primary">{{v.IOnum}}</span>
+                            </li>
+                            <li>联锁控制链
+                                <span class="right label label-primary">{{v.Logicnum}}</span>
+                            </li>
+                            <li>监控设备点
+                                <span class="right label label-primary">{{v.Videonum}}</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="panel-footer">更新时间</div>
+                </div>
+            </div>
         </div>
-        
         <!-- END MAIN CONTENT -->
     </div>
     </div>
